<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bghome"
    tools:context=".DashBoardViewer">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/bday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bday" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:text="@string/contact_number"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/address"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <ImageButton
                android:id="@+id/editProf"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/uploadphoto"
                android:scaleType="fitXY"
                android:contentDescription="@string/edit"
                android:background="@android:color/transparent"
                android:layout_margin="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_slambook"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/defprof"
            />



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageButton
            android:id="@+id/aboutMe"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:contentDescription="@string/about_me"
            android:src="@drawable/aboutme"/>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageButton
            android:id="@+id/hobbies"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/hobbies"
            android:scaleType="fitXY"
            android:contentDescription="@string/my_hobbies"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>



    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_hobbies"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageButton
            android:id="@+id/love"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/love_and_relationship"
            android:scaleType="fitXY"
            android:src="@drawable/relationship" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_and_relationship"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relationship"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <ImageButton
            android:id="@+id/funRandom"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:contentDescription="@string/fun_and_random"
            android:src="@drawable/fun" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fun_and_random"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView7"
        app:layout_constraintStart_toStartOf="@+id/cardView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView7" />

</androidx.constraintlayout.widget.ConstraintLayout>