<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bghome"
    tools:context=".EditProfile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_profile"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardProf"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:background="@drawable/defprof"
                    />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/uploadImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/upload"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/cardProf"
                app:layout_constraintStart_toEndOf="@+id/cardProf"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/upload_your_profile_picture_here"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/cardProf"
                app:layout_constraintTop_toTopOf="@+id/cardProf" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/profile_picture_here"
                android:textColor="@color/black"

                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/cardProf"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/admin_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardProf"
                tools:ignore="Autofill">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/warningName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning20x20"
                android:layout_marginEnd="15dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/admin_user"
                app:layout_constraintEnd_toEndOf="@+id/admin_user"
                app:layout_constraintTop_toTopOf="@+id/admin_user" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/genderC"
                app:layout_constraintStart_toStartOf="@+id/admin_user"
                app:layout_constraintTop_toTopOf="@+id/genderC" />

            <Spinner
                android:id="@+id/genderC"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:entries="@array/gender_options"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/admin_user"
                tools:ignore="Autofill" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/birthday"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderC" />

            <Spinner
                android:id="@+id/customSpinner"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:autofillHints="Month"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/day"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:hint="@string/day"
                android:inputType="number"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/customSpinner"
                app:layout_constraintTop_toTopOf="@+id/customSpinner" />

            <ImageView
                android:id="@+id/warningDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning20x20"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/day"
                app:layout_constraintEnd_toEndOf="@+id/day"
                app:layout_constraintTop_toTopOf="@+id/day" />

            <EditText
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="25dp"
                android:hint="@string/year"
                android:inputType="number"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/genderC"
                app:layout_constraintStart_toEndOf="@+id/day"
                app:layout_constraintTop_toTopOf="@+id/day" />

            <ImageView
                android:id="@+id/warningYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning20x20"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/year"
                app:layout_constraintEnd_toEndOf="@+id/year"
                app:layout_constraintTop_toTopOf="@+id/year" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customSpinner"
                tools:ignore="Autofill">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:textColor="@color/black"
                    android:hint="@string/address"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/warningAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning20x20"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                tools:ignore="Autofill">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:textColor="@color/black"
                    android:hint="@string/contact_number"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/doneButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/done"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>